# RTEMS_rpi_testing

./: README.md
GPIO/: README
GPIO/LIBGPIO_JTAG/: Makefile.am  Makefile.in  init.c
GPIO/LIBGPIO_MULTI_TEST/: Makefile.am  Makefile.in  init.c  rpi-conf.c
GPIO/LIBGPIO_MULTI_TEST_IRQ/: Makefile.am  Makefile.in  init.c  rpi-conf.c
GPIO/LIBGPIO_TEST/: Makefile.am  Makefile.in  init.c
GPIO/LIBGPIO_TEST_GROUP/: Makefile.am  Makefile.in  init.c  rpi-conf.c
GPIO/LIBGPIO_TEST_IRQ/: Makefile.am  Makefile.in  init.c
I2C_bus/: README
I2C_bus/Device_drivers/microchip_mcp23008/: mcp23008.c  mcp23008.h
I2C_bus/Test_cases/I2C_MCP23008_TEST/: Makefile.am  Makefile.in  init.c
SPI_bus/: README
SPI_bus/Test_cases/SPI_23k256_TEST/: Makefile.am  Makefile.in  init.c  spi_23k256_test.scn
SPI_bus/microchip_23k256/: 23k256.c  23k256.h
